Updated BERT and DistilBERT

--- a/model_experiements/DistilBERT.ipynb
+++ b/model_experiements/DistilBERT.ipynb
@@ -212,40 +212,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: transformers in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (4.46.1)\n",
-      "Requirement already satisfied: filelock in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (3.16.1)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.23.2 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (0.26.2)\n",
-      "Requirement already satisfied: numpy>=1.17 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (1.26.3)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (23.2)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (6.0.1)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (2024.7.24)\n",
-      "Requirement already satisfied: requests in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (2.31.0)\n",
-      "Requirement already satisfied: safetensors>=0.4.1 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (0.4.5)\n",
-      "Requirement already satisfied: tokenizers<0.21,>=0.20 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (0.20.1)\n",
-      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (4.66.5)\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (2024.10.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (4.9.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->transformers) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->transformers) (3.6)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->transformers) (2.1.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\redbu\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->transformers) (2023.11.17)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip3 install transformers"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -260,73 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0397f4fcccdf427799bf249937a37e83",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/48.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Redbu\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\huggingface_hub\\file_download.py:139: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Redbu\\.cache\\huggingface\\hub\\models--distilbert-base-uncased. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
+      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8028aacdfb54822aed7507a4e1a16ff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "797cfb8bf5b145ecadfe5a90fa13783f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea71f3193f8843ebba8db8ee7ac9516b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/483 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -349,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +304,7 @@
        "         2099, 14056,  9758,   102])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +326,7 @@
        "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,23 +366,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "856584ce84b64a609f2c7059e98c4bbf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/268M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -489,14 +384,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Redbu\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\transformers\\optimization.py:591: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\transformers\\optimization.py:591: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  warnings.warn(\n"
      ]
     }
@@ -507,24 +402,24 @@
     "\n",
     "optimizer = AdamW(model.parameters(), lr=5e-6)\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
-    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=1, gamma=0.1)"
+    "scheduler = StepLR(optimizer, step_size=1, gamma=0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 64\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)"
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=4, pin_memory=True, prefetch_factor=2)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=4, pin_memory=True, prefetch_factor=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -566,20 +461,20 @@
        ")"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_epochs = 3\n",
+    "num_epochs = 5\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,15 +486,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3 - Training: 100%|██████████| 799/799 [1:13:35<00:00,  5.53s/it]  \n",
-      "Epoch 1/3 - Validation: 100%|██████████| 200/200 [04:08<00:00,  1.24s/it]\n"
+      "Epoch 1/5 - Training:   0%|          | 0/799 [00:00<?, ?it/s]DistilBertSdpaAttention is used but `torch.nn.functional.scaled_dot_product_attention` does not support `output_attentions=True` or `head_mask`. Falling back to the manual attention implementation, but specifying the manual implementation will be required from Transformers version v5.0.0 onwards. This warning can be removed using the argument `attn_implementation=\"eager\"` when loading the model.\n",
+      "Epoch 1/5 - Training: 100%|██████████| 799/799 [04:51<00:00,  2.75it/s]\n",
+      "Epoch 1/5 - Validation: 100%|██████████| 200/200 [00:31<00:00,  6.27it/s]\n"
      ]
     },
     {
@@ -607,19 +503,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 1/3\n",
-      "Training Loss: 0.2269, Training Accuracy: 0.9021\n",
-      "Training Precision: 0.9021, Training Recall: 0.9021, Training F1: 0.9021\n",
-      "Validation Loss: 0.1628, Validation Accuracy: 0.9356\n",
-      "Validation Precision: 0.9404, Validation Recall: 0.9356, Validation F1: 0.9358\n"
+      "Epoch 1/5\n",
+      "Training Loss: 0.2304, Training Accuracy: 0.9022\n",
+      "Training Precision: 0.9022, Training Recall: 0.9022, Training F1: 0.9022\n",
+      "Validation Loss: 0.1637, Validation Accuracy: 0.9374\n",
+      "Validation Precision: 0.9413, Validation Recall: 0.9374, Validation F1: 0.9375\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2/3 - Training: 100%|██████████| 799/799 [53:46<00:00,  4.04s/it]\n",
-      "Epoch 2/3 - Validation: 100%|██████████| 200/200 [04:07<00:00,  1.24s/it]\n"
+      "Epoch 2/5 - Training: 100%|██████████| 799/799 [05:13<00:00,  2.55it/s]\n",
+      "Epoch 2/5 - Validation: 100%|██████████| 200/200 [00:31<00:00,  6.32it/s]\n"
      ]
     },
     {
@@ -627,19 +523,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 2/3\n",
-      "Training Loss: 0.1136, Training Accuracy: 0.9566\n",
-      "Training Precision: 0.9566, Training Recall: 0.9566, Training F1: 0.9566\n",
-      "Validation Loss: 0.1194, Validation Accuracy: 0.9543\n",
-      "Validation Precision: 0.9544, Validation Recall: 0.9543, Validation F1: 0.9543\n"
+      "Epoch 2/5\n",
+      "Training Loss: 0.1151, Training Accuracy: 0.9564\n",
+      "Training Precision: 0.9565, Training Recall: 0.9564, Training F1: 0.9565\n",
+      "Validation Loss: 0.1224, Validation Accuracy: 0.9516\n",
+      "Validation Precision: 0.9518, Validation Recall: 0.9516, Validation F1: 0.9516\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 3/3 - Training: 100%|██████████| 799/799 [54:02<00:00,  4.06s/it]\n",
-      "Epoch 3/3 - Validation: 100%|██████████| 200/200 [04:08<00:00,  1.24s/it]"
+      "Epoch 3/5 - Training: 100%|██████████| 799/799 [04:58<00:00,  2.68it/s]\n",
+      "Epoch 3/5 - Validation: 100%|██████████| 200/200 [00:31<00:00,  6.40it/s]\n"
      ]
     },
     {
@@ -647,11 +543,51 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 3/3\n",
-      "Training Loss: 0.1075, Training Accuracy: 0.9594\n",
-      "Training Precision: 0.9595, Training Recall: 0.9594, Training F1: 0.9594\n",
-      "Validation Loss: 0.1203, Validation Accuracy: 0.9536\n",
-      "Validation Precision: 0.9540, Validation Recall: 0.9536, Validation F1: 0.9536\n"
+      "Epoch 3/5\n",
+      "Training Loss: 0.1093, Training Accuracy: 0.9591\n",
+      "Training Precision: 0.9591, Training Recall: 0.9591, Training F1: 0.9591\n",
+      "Validation Loss: 0.1221, Validation Accuracy: 0.9519\n",
+      "Validation Precision: 0.9521, Validation Recall: 0.9519, Validation F1: 0.9520\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/5 - Training: 100%|██████████| 799/799 [05:04<00:00,  2.62it/s]\n",
+      "Epoch 4/5 - Validation: 100%|██████████| 200/200 [00:34<00:00,  5.82it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 4/5\n",
+      "Training Loss: 0.1080, Training Accuracy: 0.9594\n",
+      "Training Precision: 0.9594, Training Recall: 0.9594, Training F1: 0.9594\n",
+      "Validation Loss: 0.1223, Validation Accuracy: 0.9518\n",
+      "Validation Precision: 0.9520, Validation Recall: 0.9518, Validation F1: 0.9519\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/5 - Training: 100%|██████████| 799/799 [05:05<00:00,  2.61it/s]\n",
+      "Epoch 5/5 - Validation: 100%|██████████| 200/200 [00:31<00:00,  6.26it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 5/5\n",
+      "Training Loss: 0.1091, Training Accuracy: 0.9592\n",
+      "Training Precision: 0.9592, Training Recall: 0.9592, Training F1: 0.9592\n",
+      "Validation Loss: 0.1223, Validation Accuracy: 0.9518\n",
+      "Validation Precision: 0.9520, Validation Recall: 0.9518, Validation F1: 0.9519\n"
      ]
     },
     {
@@ -663,6 +599,8 @@
     }
    ],
    "source": [
+    "from tqdm import tqdm\n",
+    "\n",
     "for epoch in range(num_epochs):\n",
     "    # Training phase\n",
     "    model.train()\n",
@@ -690,7 +628,7 @@
     "        all_tr_labels.extend(labels.cpu().numpy())\n",
     "        all_tr_preds.extend(tr_preds.cpu().numpy())\n",
     "\n",
-    "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
+    "        clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
     "        optimizer.step()\n",
     "\n",
     "    scheduler.step()\n",
@@ -746,7 +684,7 @@
     "    print(f\"Training Loss: {avg_train_loss:.4f}, Training Accuracy: {train_accuracy:.4f}\")\n",
     "    print(f\"Training Precision: {train_precision:.4f}, Training Recall: {train_recall:.4f}, Training F1: {train_f1:.4f}\")\n",
     "    print(f\"Validation Loss: {avg_val_loss:.4f}, Validation Accuracy: {val_accuracy:.4f}\")\n",
-    "    print(f\"Validation Precision: {val_precision:.4f}, Validation Recall: {val_recall:.4f}, Validation F1: {val_f1:.4f}\")"
+    "    print(f\"Validation Precision: {val_precision:.4f}, Validation Recall: {val_recall:.4f}, Validation F1: {val_f1:.4f}\")\n"
    ]
   }
  ],
@@ -766,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
