--- a/model_experiements/BERT.ipynb
+++ b/model_experiements/BERT.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -202,74 +202,13 @@
        "[63860 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
-      "Collecting transformers\n",
-      "  Downloading transformers-4.46.1-py3-none-any.whl.metadata (44 kB)\n",
-      "Requirement already satisfied: filelock in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (3.15.4)\n",
-      "Collecting huggingface-hub<1.0,>=0.23.2 (from transformers)\n",
-      "  Downloading huggingface_hub-0.26.2-py3-none-any.whl.metadata (13 kB)\n",
-      "Requirement already satisfied: numpy>=1.17 in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (1.26.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from transformers) (24.1)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (6.0.2)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (2024.7.24)\n",
-      "Requirement already satisfied: requests in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (2.32.3)\n",
-      "Collecting safetensors>=0.4.1 (from transformers)\n",
-      "  Downloading safetensors-0.4.5-cp312-none-win_amd64.whl.metadata (3.9 kB)\n",
-      "Collecting tokenizers<0.21,>=0.20 (from transformers)\n",
-      "  Downloading tokenizers-0.20.1-cp312-none-win_amd64.whl.metadata (6.9 kB)\n",
-      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from transformers) (4.66.5)\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (2024.9.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (4.12.2)\n",
-      "Requirement already satisfied: colorama in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->transformers) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->transformers) (2.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->transformers) (2.2.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\user\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->transformers) (2024.8.30)\n",
-      "Downloading transformers-4.46.1-py3-none-any.whl (10.0 MB)\n",
-      "   ---------------------------------------- 0.0/10.0 MB ? eta -:--:--\n",
-      "   ------------ --------------------------- 3.1/10.0 MB 15.4 MB/s eta 0:00:01\n",
-      "   ---------------------- ----------------- 5.8/10.0 MB 14.1 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 9.2/10.0 MB 14.6 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 10.0/10.0 MB 14.6 MB/s eta 0:00:00\n",
-      "Downloading huggingface_hub-0.26.2-py3-none-any.whl (447 kB)\n",
-      "Downloading safetensors-0.4.5-cp312-none-win_amd64.whl (286 kB)\n",
-      "Downloading tokenizers-0.20.1-cp312-none-win_amd64.whl (2.4 MB)\n",
-      "   ---------------------------------------- 0.0/2.4 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 2.4/2.4 MB 19.2 MB/s eta 0:00:00\n",
-      "Installing collected packages: safetensors, huggingface-hub, tokenizers, transformers\n",
-      "Successfully installed huggingface-hub-0.26.2 safetensors-0.4.5 tokenizers-0.20.1 transformers-4.46.1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip3 install transformers"
    ]
   },
   {
@@ -299,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +308,7 @@
        "         2099, 14056,  9758,   102])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +330,7 @@
        "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -449,11 +388,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\transformers\\optimization.py:591: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "from torch.nn import BatchNorm1d\n",
     "from torch.nn.utils import clip_grad_norm_\n",
     "from torch.optim.lr_scheduler import StepLR\n",
     "\n",
@@ -467,11 +414,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 32\n",
+    "batch_size = 64\n",
     "\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)"
@@ -479,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -532,20 +479,20 @@
        ")"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_epochs = 3\n",
+    "num_epochs = 5\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model.to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,15 +504,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3 - Training: 100%|██████████| 1597/1597 [1:58:19<00:00,  4.45s/it]\n",
-      "Epoch 1/3 - Validation: 100%|██████████| 400/400 [09:07<00:00,  1.37s/it]\n"
+      "Epoch 1/5 - Training:   0%|          | 0/799 [00:00<?, ?it/s]BertSdpaSelfAttention is used but `torch.nn.functional.scaled_dot_product_attention` does not support non-absolute `position_embedding_type` or `output_attentions=True` or `head_mask`. Falling back to the manual attention implementation, but specifying the manual implementation will be required from Transformers version v5.0.0 onwards. This warning can be removed using the argument `attn_implementation=\"eager\"` when loading the model.\n",
+      "Epoch 1/5 - Training: 100%|██████████| 799/799 [09:15<00:00,  1.44it/s]\n",
+      "Epoch 1/5 - Validation: 100%|██████████| 200/200 [00:54<00:00,  3.67it/s]\n"
      ]
     },
     {
@@ -573,19 +521,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 1/3\n",
-      "Training Loss: 0.1939, Training Accuracy: 0.9206\n",
-      "Training Precision: 0.9209, Training Recall: 0.9206, Training F1: 0.9207\n",
-      "Validation Loss: 0.1120, Validation Accuracy: 0.9574\n",
-      "Validation Precision: 0.9577, Validation Recall: 0.9574, Validation F1: 0.9573\n"
+      "Epoch 1/5\n",
+      "Training Loss: 0.2154, Training Accuracy: 0.9102\n",
+      "Training Precision: 0.9103, Training Recall: 0.9102, Training F1: 0.9102\n",
+      "Validation Loss: 0.1216, Validation Accuracy: 0.9514\n",
+      "Validation Precision: 0.9520, Validation Recall: 0.9514, Validation F1: 0.9514\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2/3 - Training: 100%|██████████| 1597/1597 [1:58:44<00:00,  4.46s/it]\n",
-      "Epoch 2/3 - Validation: 100%|██████████| 400/400 [08:52<00:00,  1.33s/it]\n"
+      "Epoch 2/5 - Training: 100%|██████████| 799/799 [09:23<00:00,  1.42it/s]\n",
+      "Epoch 2/5 - Validation: 100%|██████████| 200/200 [00:55<00:00,  3.63it/s]\n"
      ]
     },
     {
@@ -593,19 +541,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 2/3\n",
-      "Training Loss: 0.0942, Training Accuracy: 0.9649\n",
-      "Training Precision: 0.9649, Training Recall: 0.9649, Training F1: 0.9649\n",
-      "Validation Loss: 0.1068, Validation Accuracy: 0.9627\n",
-      "Validation Precision: 0.9627, Validation Recall: 0.9627, Validation F1: 0.9626\n"
+      "Epoch 2/5\n",
+      "Training Loss: 0.1094, Training Accuracy: 0.9586\n",
+      "Training Precision: 0.9586, Training Recall: 0.9586, Training F1: 0.9586\n",
+      "Validation Loss: 0.1140, Validation Accuracy: 0.9561\n",
+      "Validation Precision: 0.9562, Validation Recall: 0.9561, Validation F1: 0.9561\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 3/3 - Training: 100%|██████████| 1597/1597 [1:57:48<00:00,  4.43s/it]\n",
-      "Epoch 3/3 - Validation: 100%|██████████| 400/400 [09:02<00:00,  1.36s/it]"
+      "Epoch 3/5 - Training: 100%|██████████| 799/799 [09:26<00:00,  1.41it/s]\n",
+      "Epoch 3/5 - Validation: 100%|██████████| 200/200 [00:56<00:00,  3.56it/s]\n"
      ]
     },
     {
@@ -613,11 +561,51 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 3/3\n",
-      "Training Loss: 0.0859, Training Accuracy: 0.9696\n",
-      "Training Precision: 0.9696, Training Recall: 0.9696, Training F1: 0.9696\n",
-      "Validation Loss: 0.1066, Validation Accuracy: 0.9623\n",
-      "Validation Precision: 0.9623, Validation Recall: 0.9623, Validation F1: 0.9623\n"
+      "Epoch 3/5\n",
+      "Training Loss: 0.1019, Training Accuracy: 0.9608\n",
+      "Training Precision: 0.9608, Training Recall: 0.9608, Training F1: 0.9608\n",
+      "Validation Loss: 0.1137, Validation Accuracy: 0.9562\n",
+      "Validation Precision: 0.9562, Validation Recall: 0.9562, Validation F1: 0.9562\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/5 - Training: 100%|██████████| 799/799 [09:35<00:00,  1.39it/s]\n",
+      "Epoch 4/5 - Validation: 100%|██████████| 200/200 [00:56<00:00,  3.54it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 4/5\n",
+      "Training Loss: 0.1018, Training Accuracy: 0.9605\n",
+      "Training Precision: 0.9605, Training Recall: 0.9605, Training F1: 0.9605\n",
+      "Validation Loss: 0.1137, Validation Accuracy: 0.9562\n",
+      "Validation Precision: 0.9562, Validation Recall: 0.9562, Validation F1: 0.9562\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/5 - Training: 100%|██████████| 799/799 [09:37<00:00,  1.38it/s]\n",
+      "Epoch 5/5 - Validation: 100%|██████████| 200/200 [00:56<00:00,  3.57it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 5/5\n",
+      "Training Loss: 0.1007, Training Accuracy: 0.9615\n",
+      "Training Precision: 0.9615, Training Recall: 0.9615, Training F1: 0.9615\n",
+      "Validation Loss: 0.1138, Validation Accuracy: 0.9562\n",
+      "Validation Precision: 0.9562, Validation Recall: 0.9562, Validation F1: 0.9562\n"
      ]
     },
     {
@@ -734,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
