--- a/processing_experiments/lemmatisation.ipynb
+++ b/processing_experiments/lemmatisation.ipynb
@@ -2631,7 +2631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2658,16 +2658,16 @@
    "source": [
     "\n",
     "!pip install scikit-learn\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
-    "tfidf_vectorizer = TfidfVectorizer(max_features=1000)\n",
-    "tfidf_matrix = tfidf_vectorizer.fit_transform(data['processed_full_content'])\n",
+    "count_vectorizer = CountVectorizer(max_features=1000)\n",
+    "count_matrix = count_vectorizer.fit_transform(data['processed_full_content'])\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(tfidf_matrix, data['label'],test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(count_matrix, data['label'],test_size=0.2, random_state=42)\n",
     "\n",
     "nb_model = MultinomialNB()\n",
     "nb_model.fit(X_train,y_train)\n",
