--- a/processing_experiments/booster_words.ipynb
+++ b/processing_experiments/booster_words.ipynb
@@ -2618,7 +2618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2646,7 +2646,7 @@
    "source": [
     "\n",
     "!pip install scikit-learn\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, \n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -2657,19 +2657,20 @@
     "                 \"incredibly\", \"indeed\", \"quite\", \"really\", \"remarkably\", \n",
     "                 \"so\", \"terribly\", \"totally\", \"truly\", \"utterly\", \"very\"]\n",
     "    \n",
-    "vectorizer = TfidfVectorizer(max_features=1000)\n",
-    "tfidf_matrix = vectorizer.fit_transform(data['processed_full_content'])\n",
+    "count_vectorizer = CountVectorizer(max_features=1000)\n",
+    "count_matrix = count_vectorizer.fit_transform(data['processed_full_content'])\n",
+    "\n",
     "    \n",
     "\n",
-    "feature_names = vectorizer.get_feature_names_out()\n",
+    "feature_names = count_vectorizer.get_feature_names_out()\n",
     "    \n",
     "    \n",
     "booster_indices = [np.where(feature_names == word)[0][0] for word in booster_words if word in feature_names]\n",
     "boosting_factor = 1.5\n",
     "for i in booster_indices:\n",
-    "    tfidf_matrix[:, i] = tfidf_matrix[:, i].multiply(boosting_factor)\n",
+    "    count_matrix[:, i] = count_matrix[:, i].multiply(boosting_factor)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(tfidf_matrix, data['label'],test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(count_matrix, data['label'],test_size=0.2, random_state=42)\n",
     "\n",
     "nb_model = MultinomialNB()\n",
     "nb_model.fit(X_train,y_train)\n",
