Updated n_estimators to 10 for stemming

--- a/processing_experiments/stemming.ipynb
+++ b/processing_experiments/stemming.ipynb
@@ -10,32 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution -ensorflow-intel (c:\\users\\user\\appdata\\roaming\\python\\python310\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -rotobuf (c:\\users\\user\\appdata\\roaming\\python\\python310\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ensorflow-intel (c:\\users\\user\\appdata\\roaming\\python\\python310\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -rotobuf (c:\\users\\user\\appdata\\roaming\\python\\python310\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ensorflow-intel (c:\\users\\user\\appdata\\roaming\\python\\python310\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -rotobuf (c:\\users\\user\\appdata\\roaming\\python\\python310\\site-packages)\n",
-      "ERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip3 install -r requirements.txt"
+    "# !pip3 install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +267,7 @@
        "4  The RS-28 Sarmat missile, dubbed Satan 2, will...      1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +364,7 @@
        "4  Home / Badge Abuse / Cop Arrested for Using Po...      1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +461,7 @@
        "4  Hillary Clinton strategist Bob Beckel called f...      1  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +660,7 @@
        "[72134 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +890,7 @@
        "4  The RS-28 Sarmat missile, dubbed Satan 2, will...      1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1053,7 @@
        "4  The RS-28 Sarmat missile, dubbed Satan 2, will...      1  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1092,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1187,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,14 +1237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Language Detection: 100%|██████████| 64577/64577 [14:53<00:00, 72.25it/s]\n"
+      "Language Detection: 100%|██████████| 64577/64577 [15:12<00:00, 70.78it/s]\n"
      ]
     },
     {
@@ -1376,7 +1362,7 @@
        "[64577 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1481,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1514,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1618,7 @@
        "[63860 rows x 3 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1652,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1773,7 @@
        "[63860 rows x 2 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1829,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2227,7 +2213,7 @@
        "True"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2243,7 +2229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2277,14 +2263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing News Articles: 100%|██████████| 63860/63860 [08:13<00:00, 129.29it/s]\n"
+      "Processing News Articles: 100%|██████████| 63860/63860 [08:14<00:00, 129.07it/s]\n"
      ]
     },
     {
@@ -2415,7 +2401,7 @@
        "[63860 rows x 3 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2433,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2488,16 +2474,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Accuracy: 0.9571719386157219\n",
+      "Random Forest Accuracy: 0.9343877231443783\n",
       "Random Forest Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0     0.9630    0.9587    0.9609      7004\n",
-      "           1     0.9502    0.9553    0.9527      5768\n",
+      "           0     0.9276    0.9549    0.9410      7004\n",
+      "           1     0.9432    0.9095    0.9260      5768\n",
       "\n",
-      "    accuracy                         0.9572     12772\n",
-      "   macro avg     0.9566    0.9570    0.9568     12772\n",
-      "weighted avg     0.9572    0.9572    0.9572     12772\n",
+      "    accuracy                         0.9344     12772\n",
+      "   macro avg     0.9354    0.9322    0.9335     12772\n",
+      "weighted avg     0.9346    0.9344    0.9343     12772\n",
       "\n"
      ]
     }
@@ -2505,7 +2491,7 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf_model = RandomForestClassifier(n_estimators=10, random_state=42)\n",
     "rf_model.fit(X_train, y_train)\n",
     "\n",
     "rf_predictions = rf_model.predict(X_test)\n",
